--- a/index.html
+++ b/index.html
@@ -1,12 +1,168 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Page Title</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta charset="UTF-8">
+<title>Alperen Akkoz CV</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<style>
+	html, body {
+		margin: 0;
+	}
+	
+	p{
+		font-size:22px;
+	}
+	
+	.pad{
+		padding:0 0 0 20px;
+		font-size:30px;
+	}
+	
+	.pad2{
+		padding:0 0 0 40px;
+		font-size:22px;
+	}
+	h1{
+		font-size:40px;
+		text-align: center;
+	}
+	
+</style>
 </head>
+
 <body>
+<div class="row">
+	<div class="col-3" style="width: 19.3%; flex: 0 0 19.3%;max-width: 19.3%;background-color: #666699;">
+	<br>
+		<img src="galeri/Alper.jpg" alt="Alperen Akkoz" style=" border-radius: 50%;" class="mx-auto d-block">
+		<h1>Alperen Akkoz</h1>
+		<h3 class="pad"><br>Contact</h3>
+		
+		<p class="pad2"><i class="fa fa-envelope" style="font-size:25px;color:white"></i> <a href="mailto:alperenakkoz37@gmail.com">alperenakkoz37@gmail.com</a></p>
+		<p class="pad2"><i class="fa fa-linkedin-square" style="font-size:25px;color:white"></i> <a href="https://www.linkedin.com/in/alperenakkoz/" target="_blank" rel="noopener noreferrer">Alperen Akkoz</a></p>
+		<h3 class="pad"><br>Personal Info</h3>
+		<p class="pad2">
+			<b>Military Service: </b>-<br><br>
+			<b>City: </b>İstanbul<br><br>
+			<b></b><br>
+		</p>
+	
+	
+	</div>
+	
+	<div class="col-9" style="width: 80.7%; flex: 0 0 80.7%;max-width: 80.7%; background-color: #bfbfbf;">
+		<h1>ALPEREN AKKOZ</h1>
+		<h2 class="pad"><hr>EDUCATION</h2>
+		<div class="row">
+			
+			<div class="col-6">	
+				<div class="row">			
+					<div class="col-3">	
+						<img style="" src="galeri/gal.png" alt="GOP anadolu lisesi"  width="150" height="150" >
+					</div>
+					<div class="col-9 my-auto">	
+						<p>
+						<b>Gaziosmanpaşa High School</b>		
+						<br>2014-2018 
+						</p>
+					</div>
+				</div>
+			</div>					
+			<div class="col-6">	
+				<div class="row">			
+					<div class="col-3">	
+						<img style="" src="galeri/iuc.png" alt="İüc"  width="135" height="135">
+					</div>
+					<div class="col-9 my-auto">	
+						<p>
+				<b> İstanbul Üniversitesi-Cerrahpaşa</b>
+				<br>
+				 Computer Engineering <br> 2018-2022 
+				</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<br>
+		<h2 class="pad"><hr>WORK EXPERIENCE </h2>
+		<br>
+		<div class="row">
+			<div class="col-6">
+				<div class="row">
+					<div class="col-3">	
+								<img style="padding-left: 16px;" src="galeri/logo.png" alt="Ray Bilişim"  width="135" height="135">
+					</div>
+					<div class="col-9 my-auto" >	
+						<p>
+						<b> Ray Bilişim</b>
+						<br>
+						 Full Stack Developer <br> 1 Month 
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+<hr style="margin-left: 15px;">
+		<div class="row">
+				<div class="col-6">
+				<h2 class="pad">ABILITIES </h2>
+				<div class="row">
+					<div class="col-3">	
+					<ul class="pad2">
+						<li>English (B2)</li><br>
+						<li>JavaScript </li><br>
+						<li>Flutter</li><br>
+						<li>Java </li><br>
+						<li>HTML </li><br>
+						<li>CSS </li><br>
+						<li>C </li><br>
+						<li>C++ </li><br>
+						<li>JSON </li><br>
+						<li>MySQL </li><br>
+						<li>PostgreSQL</li><br>
+						<li>SQL Server</li><br>
+					</ul>
+					</div>
+					<div class="col-9">	
+					<ul class="pad2" style="list-style-type: none;">
+						<li> <meter value="4" min="0" max="6" id="English"></meter></li><br>
+						<li> <meter value="3" min="0" max="6" id="JavaScript"></meter></li><br>
+						<li> <meter value="3" min="0" max="6" id="Flutter"></meter></li><br>
+						<li> <meter value="2" min="0" max="6" id="Java"></meter></li><br>
+						<li> <meter value="3" min="0" max="6" id="HTML"></meter></li><br>
+						<li> <meter value="3" min="0" max="6" id="CSS"></meter></li><br>
+						<li> <meter value="4" min="0" max="6" id="C"></meter></li><br>
+						<li> <meter value="4" min="0" max="6" id="C++"></meter></li><br>
+						<li> <meter value="3" min="0" max="6" id="JSON"></meter></li><br>
+						<li> <meter value="4" min="0" max="6" id="MySQL"></meter></li><br>
+						<li> <meter value="4" min="0" max="6" id="PostgreSQL"></meter></li><br>	
+						<li> <meter value="4" min="0" max="6" id="SQLServer"></meter></li><br>	
+					</ul>                                  
+					</div>
+					</div>
+				</div>
+			
+				<div class="col-6" >
+				<h2 class="pad">PROJELER </h2>
+				<div class="row">
+					<ul class="pad2">
+						<li>Dama(C++)</li><br>
+						<li>Hesap Makinesi(Flutter)</li><br>
+						<li>Aksis(Java)</li><br>
+						<li>Rehber(Flutter)</li><br>
+						<li>Alışveriş Listesi(C++)</li><br>
+						<li>E-bilet sitesi(Java + XHTML)</li><br>
+						<li>Schulte Table(Flutter)</li><br>
+					</ul>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+					</div>
+				</div>
+		</div>
+</div>
+</div>
 </body>
 </html>
