--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
 <body>
 <div class="row">
-	<div class="col-3" style="width: 19.3%; flex: 0 0 19.3%;max-width: 19.3%;background-color: #666699;">
+	<div class="col-3" style="width: 19.3%; flex: 0 0 19.3%; max-width: 19.3%; background-color: #666699;">
 	<br>
 		<img src="galeri/Alper.jpg" alt="Alperen Akkoz" style=" border-radius: 50%;" class="mx-auto d-block">
 		<h1>Alperen Akkoz</h1>
 		<h3 class="pad"><br>Contact</h3>
 		
-		<p class="pad2"><i class="fa fa-envelope" style="font-size:25px;color:white"></i> <a href="mailto:alperenakkoz37@gmail.com">alperenakkoz37@gmail.com</a></p>
-		<p class="pad2"><i class="fa fa-linkedin-square" style="font-size:25px;color:white"></i> <a href="https://www.linkedin.com/in/alperenakkoz/" target="_blank" rel="noopener noreferrer">Alperen Akkoz</a></p>
+		<p class="pad2"><i class="fa fa-envelope" style="font-size:25px; color:white;"></i> <a href="mailto:alperenakkoz37@gmail.com">alperenakkoz37@gmail.com</a></p>
+		<p class="pad2"><i class="fa fa-linkedin-square" style="font-size:25px; color:white;"></i> <a href="https://www.linkedin.com/in/alperenakkoz/" target="_blank" rel="noopener noreferrer">Alperen Akkoz</a></p>
 		<h3 class="pad"><br>Personal Info</h3>
 		<p class="pad2">
 			<b>Military Service: </b>-<br><br>
@@ -53,7 +53,7 @@
 	
 	</div>
 	
-	<div class="col-9" style="width: 80.7%; flex: 0 0 80.7%;max-width: 80.7%; background-color: #bfbfbf;">
+	<div class="col-9" style="width: 80.7%; flex: 0 0 80.7%; max-width: 80.7%; background-color: #bfbfbf;">
 		<h1>ALPEREN AKKOZ</h1>
 		<h2 class="pad"><hr>EDUCATION</h2>
 		<div class="row">
@@ -61,7 +61,7 @@
 			<div class="col-6">	
 				<div class="row">			
 					<div class="col-3">	
-						<img style="" src="galeri/gal.png" alt="GOP anadolu lisesi"  width="150" height="150" >
+						<img src="galeri/gal.png" alt="GOP anadolu lisesi"  width="150" height="150" >
 					</div>
 					<div class="col-9 my-auto">	
 						<p>
@@ -74,7 +74,7 @@
 			<div class="col-6">	
 				<div class="row">			
 					<div class="col-3">	
-						<img style="" src="galeri/iuc.png" alt="İüc"  width="135" height="135">
+						<img src="galeri/iuc.png" alt="İüc"  width="135" height="135">
 					</div>
 					<div class="col-9 my-auto">	
 						<p>
