--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-	
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta charset="UTF-8">
 <title>Alperen Akkoz CV</title>
@@ -11,6 +10,7 @@
 <style>
 	html, body {
 		margin: 0;
+		overflow-x: hidden;
 	}
 	
 	p{
@@ -36,7 +36,7 @@
 
 <body>
 <div class="row">
-	<div class="col-3" style="width: 19.3%; flex: 0 0 19.3%; max-width: 19.3%; background-color: #666699;">
+	<div class="col-xl-3" style="width: 19.3%; flex: 0 0 19.3%; max-width: 19.3%; background-color: #666699;">
 	<br>
 		<img src="galeri/Alper.jpg" alt="Alperen Akkoz" style=" border-radius: 50%;" class="mx-auto d-block">
 		<h1>Alperen Akkoz</h1>
@@ -54,17 +54,17 @@
 	
 	</div>
 	
-	<div class="col-9" style="width: 80.7%; flex: 0 0 80.7%; max-width: 80.7%; background-color: #bfbfbf;">
+	<div class="col-xl-9" style="width: 80.7%; flex: 0 0 80.7%; max-width: 80.7%; background-color: #bfbfbf;">
 		<h1>ALPEREN AKKOZ</h1>
 		<h2 class="pad"><hr>EDUCATION</h2>
 		<div class="row">
 			
-			<div class="col-6">	
+			<div class="col-xl-6">	
 				<div class="row">			
-					<div class="col-3">	
+					<div class="col-xl-3">	
 						<img src="galeri/gal.png" alt="GOP anadolu lisesi"  width="150" height="150" >
 					</div>
-					<div class="col-9 my-auto">	
+					<div class="col-xl-9 my-auto">	
 						<p>
 						<b>Gaziosmanpaşa High School</b>		
 						<br>2014-2018 
@@ -72,12 +72,12 @@
 					</div>
 				</div>
 			</div>					
-			<div class="col-6">	
+			<div class="col-xl-6">	
 				<div class="row">			
-					<div class="col-3">	
+					<div class="col-xl-3">	
 						<img src="galeri/iuc.png" alt="İüc"  width="135" height="135">
 					</div>
-					<div class="col-9 my-auto">	
+					<div class="col-xl-9 my-auto">	
 						<p>
 				<b> İstanbul Üniversitesi-Cerrahpaşa</b>
 				<br>
@@ -91,12 +91,12 @@
 		<h2 class="pad"><hr>WORK EXPERIENCE </h2>
 		<br>
 		<div class="row">
-			<div class="col-6">
+			<div class="col-xl-6">
 				<div class="row">
-					<div class="col-3">	
+					<div class="col-xl-3">	
 								<img style="padding-left: 16px;" src="galeri/logo.png" alt="Ray Bilişim"  width="135" height="135">
 					</div>
-					<div class="col-9 my-auto" >	
+					<div class="col-xl-9 my-auto" >	
 						<p>
 						<b> Ray Bilişim</b>
 						<br>
@@ -108,10 +108,10 @@
 		</div>
 <hr style="margin-left: 15px;">
 		<div class="row">
-				<div class="col-6">
+				<div class="col-xl-6">
 				<h2 class="pad">ABILITIES </h2>
 				<div class="row">
-					<div class="col-3">	
+					<div class="col-xl-3">	
 					<ul class="pad2">
 						<li>English (B2)</li><br>
 						<li>JavaScript </li><br>
@@ -127,7 +127,7 @@
 						<li>SQL Server</li><br>
 					</ul>
 					</div>
-					<div class="col-9">	
+					<div class="col-xl-9">	
 					<ul class="pad2" style="list-style-type: none;">
 						<li> <meter value="4" min="0" max="6" id="English"></meter></li><br>
 						<li> <meter value="3" min="0" max="6" id="JavaScript"></meter></li><br>
@@ -146,7 +146,7 @@
 					</div>
 				</div>
 			
-				<div class="col-6" >
+				<div class="col-xl-6" >
 				<h2 class="pad">PROJELER </h2>
 				<div class="row">
 					<ul class="pad2">
