--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@
 				</div>
 			
 				<div class="col-xl-6" >
-				<h2 class="pad">PROJELER </h2>
+				<h2 class="pad">PROJECTS </h2>
 				<div class="row">
 					<ul class="pad2">
-						<li>Dama(C++)</li><br>
-						<li>Hesap Makinesi(Flutter)</li><br>
+						<li>Checkers(C++)</li><br>
+						<li>Calculator(Flutter)</li><br>
 						<li>Aksis(Java)</li><br>
-						<li>Rehber(Flutter)</li><br>
-						<li>Alışveriş Listesi(C++)</li><br>
-						<li>E-bilet sitesi(Java + XHTML)</li><br>
-						<li>Schulte Table(Flutter)</li><br>
+						<li>Phonebook(Flutter)</li><br>
+						<li>Shoplist(C++)</li><br>
+						<li>E-ticket site(Java + XHTML)</li><br>
+						<li>Schulte Table Game(Flutter)</li><br>
 					</ul>
 
 					</div>
