--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 						<ul class="pad2">
 							<li>Shoplist(C++)</li><br>
 							<li>E-ticket site(Java + XHTML)</li><br>
-							<li>Schulte Table Game(Flutter)</li><br>
+							<li><a href="https://github.com/alperenakkoz/simple_flutter_game" target="_blank" rel="noopener noreferrer">Schulte Table Game(Flutter)</a></li><br>
 						</ul>
 					</div>
 					
