--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 					</div>
 					<div class="col-xl-7">	
 						<ul class="pad2">
-							<li>Shoplist(C++)</li><br>
+							<li><a href="https://github.com/alperenakkoz/ShopList-Class_example-" target="_blank" rel="noopener noreferrer">Shoplist(C++)</li><br>
 							<li>E-ticket site(Java + XHTML)</li><br>
 							<li><a href="https://github.com/alperenakkoz/simple_flutter_game" target="_blank" rel="noopener noreferrer">Schulte Table Game(Flutter)</a></li><br>
 						</ul>
