--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-<div class="row" style="height: %100;">
+<div class="row" style="height: 100%;">
 	<div class="col-xl-3" style="width: 19.3%; flex: 0 0 19.3%; max-width: 19.3%; background-color: #666699;">
 	<br>
 		<img src="galeri/Alper.jpg" alt="Alperen Akkoz" style=" border-radius: 50%;" class="mx-auto d-block">
