--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-<div class="container">
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-xl-3" style="width: 19.3%; flex: 0 0 19.3%; max-width: 19.3%; background-color: #666699;">
 		<br>
